[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
itertools = "0.10.5"
num = "0.4.0"
petgraph = "0.6.2"
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
